# maestro

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-05-30-maestro-design.md
packaging/: PKGBUILD  maestro.desktop
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icon-src/: make_icon.py
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  ipc.rs  lib.rs  main.rs  model.rs
src-tauri/src/core/: events.rs  mod.rs  registry.rs
src-tauri/src/provider/: docker.rs  fake.rs  mod.rs  systemd.rs
src/lib/: Sparkline.svelte  api.ts  format.ts
src/routes/: +page.svelte
